objects/RepositoryDocument__c.object
<CustomObject>
    <fields>
        <fullName>DocumentStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the validity of the document.</description>
        <inlineHelpText>Identifies the validity of the document.</inlineHelpText>
        <label>Document Status</label>
        <referenceTo>DocumentStatus__c</referenceTo>
        <relationshipLabel>Repository Documents</relationshipLabel>
        <relationshipName>RepositoryDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This documents type</description>
        <inlineHelpText>This documents type</inlineHelpText>
        <label>Document Type</label>
        <referenceTo>Documenttype__c</referenceTo>
        <relationshipLabel>Repository Documents</relationshipLabel>
        <relationshipName>RepositoryDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The employment period to which this document belongs. If it is an employee document, it must be related to an employment period. If it applies across multiple hire dates, multiple records should be entered (this should happen only about 5% of the time).</description>
        <inlineHelpText>The employment period to which this document belongs. If it is an employee document, it must be related to an employment period. If it applies across multiple hire dates, multiple records should be entered (this should happen only about 5% of the time).</inlineHelpText>
        <label>Employment Period</label>
        <referenceTo>Employment__c</referenceTo>
        <relationshipLabel>Repository Documents</relationshipLabel>
        <relationshipName>RepositoryDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LaserficheDocumentId__c</fullName>
        <description>The Laserfiche document id generated in the Laserfiche application</description>
        <externalId>true</externalId>
        <inlineHelpText>The Laserfiche document id generated in the Laserfiche application</inlineHelpText>
        <label>Laserfiche Document ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RepositoryDocumentEID__c</fullName>
        <description>The Enterprise ID for this Repository Document record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Repository Document record.</inlineHelpText>
        <label>Repository Document EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ScannedDate__c</fullName>
        <description>The date and time we scanned the document into the repository.</description>
        <inlineHelpText>The date and time we scanned the document into the repository.</inlineHelpText>
        <label>Scanned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wktDocument8850__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The automatically generated IRS Form 8850.</description>
        <inlineHelpText>The automatically generated IRS Form 8850.</inlineHelpText>
        <label>IRS Form 8850</label>
        <referenceTo>wktDocument8850__c</referenceTo>
        <relationshipLabel>Repository Documents</relationshipLabel>
        <relationshipName>RepositoryDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Repository Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DocumentType__c</columns>
        <columns>DocumentStatus__c</columns>
        <columns>Employment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Repository Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repository Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EMp</fullName>
        <active>true</active>
        <errorConditionFormula>Employment__c  = null  || Employment__c = &apos; &apos;</errorConditionFormula>
        <errorDisplayField>Employment__c</errorDisplayField>
        <errorMessage>There is no Employment Id in the Repository Document</errorMessage>
    </validationRules>
</CustomObject>